@@ -1,5 +1,10 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Fix a bug in the NSE http library which would cause some scripts to
+  give the error: SCRIPT ENGINE: C:\Program
+  Files\Nmap\nselib/http.lua:77: attempt to call field 'parse' (a nil
+  value) [Jah]
+
 o The NSE datafiles library now has generic file parsing routines, and
   the parsing of the standard nmap data files (e.g. nmap-services,
   nmap-protocols, etc.) now uses those generic routines.  NSE scripts
